Fri Jan 27 17:08:06 1995  Stan Shebs  <shebs@andros.cygnus.com>

	* convex-tdep.c (xfer_core_file): Comment out.
	* config/convex/tm-convex.h (XFER_CORE_FILE): Remove.
	* remote.c, remote-pa.c (remote_fetch_word): Change xfer_core_file
        references to target_read_memory.
	* gdbcore.h (xfer_core_file, core_open, core_detach): Remove
	declarations.
	* corelow.c (core_open, core_detach): Make static.

	* arm-tdep.c: Make it compile.
	(exec_file_command, xfer_core_file): Comment out.
	(arm_print_insn): Remove, now in libopcodes.
	(skip_prologue): Comment out most of body.
	(arm_frame_find_saved_regs): Move here from tm-arm.h.
	(_initialize_arm_tdep): Set tm_print_insn.
	* config/arm/tm-arm.h: Remove old refs to first_object_file_end.
	(XFER_CORE_FILE): Remove.
	(FRAME_FIND_SAVED_REGS): Call arm_frame_find_saved_regs.
	
Fri Jan 27 08:48:28 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* Makefile.in (CHILL_LIB): Define as in testsuite/Makefile.in.

Thu Jan 26 18:24:41 1995  Jim Kingdon  <kingdon@deneb.cygnus.com>

	* symtab.c (find_pc_line): When subtracting one to get a line
	number, make sure not to end up with zero.

	* remote-vx.c: Revert all of Kung's changes of 16 Jan.  The
	problems with those changes were (a) the file didn't compile, (b)
	they changed memset to bzero--memset is correct, (c) they took out
	code to deal with boards lacking floating point, (d) who knows
	what I didn't discover in a quick read.

Thu Jan 26 17:32:54 1995  Stu Grossman  (grossman@cygnus.com)

	* sparcl-tdep.c:  Clean up formatting and indentation.

Thu Jan 26 10:49:59 1995  Steve Chamberlain  <sac@splat>

	* remote-hms.c (hms_ops): Change ref of hr_load_image
	to gr_load_image.
	(dcache_flush, dcache_hit, dcache_value, dcache_fetch,
	dcache_poke, dcache_init):  Deleted.
	(hms_open, hms_resume, hms_fetch_word, hms_store_word):
	Use dcache routines provided by remote-util.h

Thu Jan 26 12:08:31 1995  Michael Meissner  <meissner@cygnus.com>
